# tft26-firmware-test

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
exercises/01_parts_counter/: ANALISYS.md  README.md  main.cpp
exercises/02_frequency_estimator/: README.md  main.cpp
exercises/03_i2c_bitbang/: README.md  main.cpp
hal/: trac_fw_io.hpp
hal/lib/windows-x64/hal-windows-x64/Release/: hal.lib
